--- a/index.html
+++ b/index.html
@@ -147,75 +147,70 @@
       <!-- TESTIMONIALS -->
       <section class="section" id="testimonials">
         <div class="container">
-          <header class="title">
-            <h2>Depoimentos de quem já passou por aqui</h2>
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
-
           <div class="testimonials swiper-container">
             <div class="swiper-wrapper">
-              <!-- FIRST TESTEMONIAL -->
               <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
-                    <span>&ldquo;</span> Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Porro beatae inventore expedita totam
-                    harum. Ex architecto alias iusto temporibus numquam ea
-                    consequatur eius earum sint magni, beatae esse eum qui?
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
                   </p>
                   <cite>
                     <img
                       src="assets/fotos/10.jpeg"
-                      alt="Foto de Vanessa Souza"
+                      alt="Foto de Wanessa Souza"
                     />
-                    Vanessa Souza
+                    Wanessa Souza
                   </cite>
                 </blockquote>
               </div>
 
-              <!-- SECOND TESTEMONIAL -->
               <div class="testimonial swiper-slide">
                 <blockquote>
                   <p>
-                    <span>&ldquo;</span> Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Porro beatae inventore expedita totam
-                    harum. Ex architecto alias iusto temporibus numquam ea
-                    consequatur eius earum sint magni, beatae esse eum qui?
-                  </p>
-                  <cite>
-                    <img
-                      src="assets/fotos/26.jpeg"
-                      alt="Foto de Franciele Vanega"
-                    />
-                    Franciele Vanega
-                  </cite>
-                </blockquote>
-              </div>
-
-              <!-- THIRD TESTEMONIAL -->
-              <div class="testimonial swiper-slide">
-                <blockquote>
-                  <p>
-                    <span>&ldquo;</span> Lorem ipsum dolor sit, amet consectetur
-                    adipisicing elit. Porro beatae inventore expedita totam
-                    harum. Ex architecto alias iusto temporibus numquam ea
-                    consequatur eius earum sint magni, beatae esse eum qui?
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
                   </p>
                   <cite>
                     <img
                       src="assets/fotos/56.jpeg"
-                      alt="Foto de Valeska Fabris"
+                      alt="Foto de Franciele Venega"
+                    />
+                    Franciele Venega
+                  </cite>
+                </blockquote>
+              </div>
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Rerum blanditiis saepe nam excepturi explicabo ipsa error
+                    ipsam neque
+                  </p>
+                  <cite>
+                    <img
+                      src="assets/fotos/26.jpeg"
+                      alt="Fotos de Valeska Fabris"
                     />
                     Valeska Fabris
                   </cite>
                 </blockquote>
               </div>
-            </div>
 
+            </div>
             <!-- PAGINATION -->
-            <!-- <div class="swiper-pagination"></div> -->
+            <div class="swiper-pagination"></div>
           </div>
-        </div>
-      </section>
+       </section>
       <div class="divider-2"></div>
 
       <!-- CONTACT -->
